--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,109 +5,100 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="107dp"
         android:layout_marginLeft="107dp"
-        android:text="ID:"
+        android:text="@string/id"
+        android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="#000000"
-
-        app:layout_constraintBaseline_toBaselineOf="@+id/textview_id"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textviewId"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textview_id"
+        android:id="@+id/textviewId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
         android:layout_marginLeft="132dp"
         android:layout_marginTop="132dp"
-        android:text="TextView"
         android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
- <!--   <View
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textview_id"
-        android:background="#000000"/>
--->
+
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sort Name:"
+        android:text="@string/sort_name"
+        android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="#000000"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textview_sortname"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textviewSortname"
         app:layout_constraintStart_toStartOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/textview_sortname"
+        android:id="@+id/textviewSortname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="47dp"
-        android:text="TextView"
+        android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="#000000"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textview_id" />
+        app:layout_constraintTop_toBottomOf="@+id/textviewId" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name:"
+        android:text="@string/name"
+        android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="#000000"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textview_name"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textviewName"
         app:layout_constraintStart_toStartOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textview_name"
+        android:id="@+id/textviewName"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
-        android:text="TextView"
+        android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="@+id/textview_sortname"
-        app:layout_constraintTop_toBottomOf="@+id/textview_sortname" />
+        app:layout_constraintStart_toStartOf="@+id/textviewSortname"
+        app:layout_constraintTop_toBottomOf="@+id/textviewSortname" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone Code:"
+        android:text="@string/phone_code"
+        android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="#000000"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textview_phonecode"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textviewPhonecode"
         app:layout_constraintStart_toStartOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/textview_phonecode"
+        android:id="@+id/textviewPhonecode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="36dp"
-        android:text="TextView"
         android:textColor="#000000"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textview_name" />
+        app:layout_constraintTop_toBottomOf="@+id/textviewName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
